--- a/package.json
+++ b/package.json
@@ -9,23 +9,38 @@
     "postinstall": "fumadocs-mdx"
   },
   "dependencies": {
-    "next": "15.0.3",
-    "fumadocs-ui": "14.4.2",
+    "@emailjs/browser": "^4.4.1",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "fumadocs-core": "14.4.2",
+    "fumadocs-mdx": "11.1.1",
+    "fumadocs-ui": "14.4.2",
+    "geist": "^1.3.1",
+    "lucide-react": "^0.482.0",
+    "next": "15.0.3",
+    "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "fumadocs-mdx": "11.1.1"
+    "react-icons": "^5.5.0",
+    "react-syntax-highlighter": "^15.6.1",
+    "sonner": "^2.0.1",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/mdx": "^2.0.13",
     "@types/node": "22.9.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "typescript": "^5.6.3",
-    "@types/mdx": "^2.0.13",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "autoprefixer": "^10.4.20",
+    "eslint": "^8",
+    "eslint-config-next": "15.0.3",
     "postcss": "^8.4.48",
     "tailwindcss": "^3.4.14",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3"
+    "typescript": "^5.6.3"
   }
 }
