--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.1",
     "fumadocs-core": "14.4.2",
     "fumadocs-mdx": "11.1.1",
+    "fumadocs-openapi": "^7.0.14",
     "fumadocs-ui": "14.4.2",
     "geist": "^1.3.1",
     "lucide-react": "^0.482.0",
@@ -26,6 +27,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-syntax-highlighter": "^15.6.1",
+    "shiki": "^3.2.2",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
